--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>React Fundamentals - Wagner Filgueiras</title>
   </head>
   <body>
     <div id="root"></div>
